Fully functional drag&drop (I want then to modify a little the servlet but not important)

--- a/RIA/src/main/webapp/resources/mystyle.css
+++ b/RIA/src/main/webapp/resources/mystyle.css
@@ -1,6 +1,4 @@
-.redtext {color: red;}
-
-.greentext {color: green;}
+.redtext { color : red;}
 
 .box {
 border-width: 2px;
@@ -28,4 +26,8 @@ padding-left: 30px;
 	position: absolute;
   	left: 50%;
   	transform: translateX(-50%);
+}
+
+.morespaceup {
+	margin-top : 7px;
 }
